@@ -16,7 +16,7 @@ use inc::Module::Install @inc;
     name('v6-alpha');
 all_from('lib/v6.pm');
 
-requires('Pugs::Compiler::Rule' => '0.10');
+requires('Pugs::Compiler::Rule' => '0.11');
 requires('Module::Compile'      => '0.17');
 requires('Scalar::Util'         => '0');
 requires('Devel::Caller'        => '0.10');
