@@ -1,3 +1,5 @@
+- parses chain operators
+
 0.007  2006-07-12
 
 - added HACKING file
